Fixed export header spacing and increased t-shirt name size

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             top: 30%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 14px;
-            font-weight: 800;
+            font-size: 18px;
+            font-weight: 900;
             color: white;
-            text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
             white-space: nowrap;
             letter-spacing: 0.5px;
             text-transform: uppercase;
@@ -630,26 +630,30 @@
             background-color: #1f2937;
             color: white;
             font-weight: 900;
-            font-size: 24px;
+            font-size: 20px;
+            width: 100%;
+            table-layout: auto;
         }
 
         .export-mode .export-table th {
             background: linear-gradient(to right, #4c1d95, #831843) !important;
             color: white !important;
-            font-size: 28px !important;
+            font-size: 22px !important;
             font-weight: 900 !important;
-            padding: 20px 25px !important;
+            padding: 15px 10px !important;
             border-color: #6b21a8 !important;
-            letter-spacing: 1px !important;
+            white-space: nowrap !important;
+            min-width: auto !important;
         }
 
         .export-mode .export-table td {
             background-color: #1f2937 !important;
             color: white !important;
             font-weight: 800 !important;
-            font-size: 24px !important;
-            padding: 18px 20px !important;
+            font-size: 20px !important;
+            padding: 15px 12px !important;
             border-color: #374151 !important;
+            white-space: nowrap !important;
         }
 
         .export-mode .export-table tr:nth-child(even) td {
@@ -678,7 +682,7 @@
             display: inline !important;
             color: white !important;
             font-weight: 900 !important;
-            font-size: 24px !important;
+            font-size: 20px !important;
         }
     </style>
 </head>
