Made jersey number column HUGE (36px) with red color in export

--- a/index.html
+++ b/index.html
@@ -651,6 +651,11 @@
             color: #fbbf24 !important;
         }
 
+        .export-mode .export-table th:nth-child(6) {
+            font-size: 30px !important;
+            color: #ef4444 !important;
+        }
+
         .export-mode .export-table td {
             background-color: #1f2937 !important;
             color: white !important;
@@ -667,6 +672,13 @@
             color: #fbbf24 !important;
             text-transform: uppercase !important;
             letter-spacing: 1px !important;
+        }
+
+        .export-mode .export-table td:nth-child(6) {
+            font-size: 36px !important;
+            font-weight: 900 !important;
+            color: #ef4444 !important;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5) !important;
         }
 
         .export-mode .export-table tr:nth-child(even) td {
